--- a/todo
+++ b/todo
@@ -4,5 +4,6 @@
   ☐ Portfolio
     ☐ Same size of grid images?
   ☐ Journal
+☐ Load images and other content like portfolio on access.
 ☐ Quote box with shuffling
 ☐ Translucency in drop down of navbar
