--- a/todo
+++ b/todo
@@ -2,8 +2,11 @@
   ☐ Homepage aka Bio
     ☐ Resume?
   ☐ Portfolio
-    ☐ Same size of grid images?
+    ☐ What happens when we click on the portfolio item?
+    ☐ Portfolio item highlights
   ☐ Journal
 ☐ Load images and other content like portfolio on access.
 ☐ Quote box with shuffling
 ☐ Translucency in drop down of navbar
+☐ Remove section titles?
+☐ Round corners of title in navbar like nav links
