--- a/todo
+++ b/todo
@@ -2,8 +2,9 @@
   ☐ Homepage aka Bio
     ☐ Resume?
   ☐ Portfolio
+    ☐ Hover effect for mobiles
+    ☐ Hover excerpt
     ☐ What happens when we click on the portfolio item?
-    ☐ Portfolio item highlights
   ☐ Journal
 ☐ Load images and other content like portfolio on access.
 ☐ Quote box with shuffling
